--- a/index.html
+++ b/index.html
@@ -14,17 +14,57 @@
         </div>
       </div>
       <h1 class="border"></h1>
-      <div style="display: flex;justify-content: center; padding-top: 7rem;">
-        <p style="color: white; font-size: 9rem;">
+      <div style="display: flex;justify-content: center; padding-top: 10vh;">
+        <p style="color: white; font-size: 15vh; width: 50%; z-index: 2">
           SleepyPuppy404 <br>
           A guy <br>
           doing stuff <br>
           for a class 
         </p>
-        <img src="sleepy_puppy.png" style="width: 50rem; height: auto;">
+        <img src="sleepy_puppy.png" style="width: 60vh; height: auto;">
       </div>
-      <h1 style="color: white; text-align: center; font-size: 10rem;" data-aos="fade-in">Assignments</h1>
-      <img src="link_1.png" class = "portfolio_link" style="width: 50rem; height: auto;">
+      <br><br><br><br><br><br>
+      <h1 style="color: white; text-align: center; font-size: 12vh;" data-aos="fade-in">Assignments</h1>
+      <br>
+      <div class="grid2x2" style="margin-left: 5%">
+        <div style="color: white; text-align: center" class="boxthing">
+          <div class="box" style="padding-top: 1.5vh;"><img src="blue_bagel.png" style="width: 90%; border-radius: 25px; z-index: 2"></div>
+          <h2 style="z-index: 3; font-size: 4vh">Responsive Redesign</h2>
+          <div style="text-align: center;">
+            <br>
+            <p style="width: 60%; font-size: 2.5vh;">I spent time making a responsive redesign of a local buisness's website: Bagel Gourmet Cafe
+              Click on the image above to go visit the redesign!
+            </p>
+          </div>
+          <br>
+        </div>
+        <div style="color: white; text-align: center" class="boxthing">
+          <div class="box" style="padding-top: 1.5vh;"><img src="pixel_puppies.png" style="width: 90%; border-radius: 25px; z-index: 2"></div>
+          <h2 style="z-index: 3; font-size: 4vh">React App</h2>
+          <div style="text-align: center;">
+            <br>
+            <p style="width: 60%; font-size: 2.5vh;">I worked on making a react app that would help families plan and select puppy adoption. Click
+              on the image above to go and check out my process!
+            </p>
+          </div>
+          <br>
+        </div>
+        <div style="color: white; text-align: center" class="boxthing">
+          <div class="box" style="padding-top: 1.5vh;"><img src="blue_bagel.png" style="width: 90%; border-radius: 25px; z-index: 2"></div>
+          <h2 style="z-index: 3; font-size: 4vh">Responsive Redesign</h2>
+          <div style="text-align: center;">
+            <br>
+            <p style="width: 60%; font-size: 2.5vh;">I spent time making a responsive redesign of a local buisness's website: Bagel Gourmet Cafe
+              Click on the image above to go visit the redesign!
+            </p>
+          </div>
+          <br>
+        </div>
+        <div style="color: white; text-align: center" class="boxthing">
+          <div class="box"><div>four</div></div>
+        </div>
+      </div>
+      <br><br><br><br><br><br><br><br>
       <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
       <script>
         AOS.init();
