--- a/index.html
+++ b/index.html
@@ -28,18 +28,25 @@
       <br>
       <div class="grid2x2" style="margin-left: 5%">
         <div style="color: white; text-align: center" class="boxthing">
-          <div class="box" style="padding-top: 1.5vh;"><img src="blue_bagel.png" style="width: 90%; border-radius: 25px; z-index: 2"></div>
+          <br>
+          <br>
+          <div class="box" style="padding-top: 1.5vh;" onclick="location.href='Responsive_Redesign.html';">
+            <img src="blue_bagel.png" style="width: 75%; border-radius: 25px; z-index: 2">
+          </div>
           <h2 style="z-index: 3; font-size: 4vh">Responsive Redesign</h2>
           <div style="text-align: center;">
-            <br>
             <p style="width: 60%; font-size: 2.5vh;">I spent time making a responsive redesign of a local buisness's website: Bagel Gourmet Cafe
               Click on the image above to go visit the redesign!
             </p>
           </div>
           <br>
         </div>
-        <div style="color: white; text-align: center" class="boxthing">
-          <div class="box" style="padding-top: 1.5vh;"><img src="pixel_puppies.png" style="width: 90%; border-radius: 25px; z-index: 2"></div>
+        <div style="color: white; text-align: center;" class="boxthing">
+          <br>
+          <br>
+          <div class="box" style="padding-top: 1.5vh;">
+              <img src="pixel_puppies.png" style="width: 70%; border-radius: 25px; z-index: 2">
+          </div>
           <h2 style="z-index: 3; font-size: 4vh">React App</h2>
           <div style="text-align: center;">
             <br>
@@ -50,12 +57,13 @@
           <br>
         </div>
         <div style="color: white; text-align: center" class="boxthing">
-          <div class="box" style="padding-top: 1.5vh;"><img src="blue_bagel.png" style="width: 90%; border-radius: 25px; z-index: 2"></div>
-          <h2 style="z-index: 3; font-size: 4vh">Responsive Redesign</h2>
+          <br>
+          <div class="box" style="padding-top: 1.5vh;"><img src="syringe.png" style="width: 70%; border-radius: 25px; z-index: 2"></div>
+          <h2 style="z-index: 3; font-size: 4vh">Iterative Design</h2>
           <div style="text-align: center;">
             <br>
-            <p style="width: 60%; font-size: 2.5vh;">I spent time making a responsive redesign of a local buisness's website: Bagel Gourmet Cafe
-              Click on the image above to go visit the redesign!
+            <br>
+            <p style="width: 60%; font-size: 2.5vh;">Here is the link to the iterative design process project I did.
             </p>
           </div>
           <br>
