--- a/index.html
+++ b/index.html
@@ -15,63 +15,83 @@
       </div>
       <h1 class="border"></h1>
       <div style="display: flex;justify-content: center; padding-top: 10vh;">
-        <p style="color: white; font-size: 15vh; width: 50%; z-index: 2">
+        <p style="color: black; font-size: 15vh; width: 50%; z-index: 2; font-family: DM Sans, sans-serif">
           SleepyPuppy404 <br>
           A guy <br>
           doing stuff <br>
           for a class 
         </p>
-        <img src="sleepy_puppy.png" style="width: 60vh; height: auto;">
+        <img src="puppy.jpeg" style="width: 39%; height: auto; z-index: -10; margin-top: 20vh;">
       </div>
       <br><br><br><br><br><br>
-      <h1 style="color: white; text-align: center; font-size: 12vh;" data-aos="fade-in">Assignments</h1>
+      <h1 style="color: black; text-align: center; font-size: 12vh;" data-aos="fade-in">Projects</h1>
       <br>
-      <div class="grid2x2" style="margin-left: 5%">
-        <div style="color: white; text-align: center" class="boxthing">
+      <div style="color: black; height: 50%; text-align: center; display: flex; width: 90%; margin-left: 5%;" data-aos="fade-in" class="boxthing">
+        <div style="text-align: left; display: inline-block; margin-left: 10%;">
           <br>
           <br>
-          <div class="box" style="padding-top: 1.5vh;" onclick="location.href='Responsive_Redesign.html';">
-            <img src="blue_bagel.png" style="width: 75%; border-radius: 25px; z-index: 2">
-          </div>
+          <br>
+          <br>
+          <br>
           <h2 style="z-index: 3; font-size: 4vh">Responsive Redesign</h2>
-          <div style="text-align: center;">
-            <p style="width: 60%; font-size: 2.5vh;">I spent time making a responsive redesign of a local buisness's website: Bagel Gourmet Cafe
-              Click on the image above to go visit the redesign!
-            </p>
-          </div>
-          <br>
+          <p style="font-size: 2.5vh;">I spent time making a responsive redesign of a local buisness's website: Bagel Gourmet Cafe
+            Click on the image above to go visit the redesign!
+          </p>
         </div>
-        <div style="color: white; text-align: center;" class="boxthing">
-          <br>
-          <br>
-          <div class="box" style="padding-top: 1.5vh;">
-              <img src="pixel_puppies.png" style="width: 70%; border-radius: 25px; z-index: 2">
-          </div>
-          <h2 style="z-index: 3; font-size: 4vh">React App</h2>
-          <div style="text-align: center;">
-            <br>
-            <p style="width: 60%; font-size: 2.5vh;">I worked on making a react app that would help families plan and select puppy adoption. Click
-              on the image above to go and check out my process!
-            </p>
-          </div>
-          <br>
-        </div>
-        <div style="color: white; text-align: center" class="boxthing">
-          <br>
-          <div class="box" style="padding-top: 1.5vh;"><img src="syringe.png" style="width: 70%; border-radius: 25px; z-index: 2"></div>
-          <h2 style="z-index: 3; font-size: 4vh">Iterative Design</h2>
-          <div style="text-align: center;">
-            <br>
-            <br>
-            <p style="width: 60%; font-size: 2.5vh;">Here is the link to the iterative design process project I did.
-            </p>
-          </div>
-          <br>
-        </div>
-        <div style="color: white; text-align: center" class="boxthing">
-          <div class="box"><div>four</div></div>
+        <div class="box" style="padding-top: 1.5vh; padding-bottom: 1.5vh; display: inline-block;" onclick="location.href='Responsive_Redesign.html';">
+          <img src="images/redesign/bagel_sandwich.webp" style="width: 50%; border-radius: 25px; z-index: 2">
         </div>
       </div>
+      <div style="color: black; height: 50vh; text-align: center; display: flex; width: 90%; margin-left: 5%;" data-aos="fade-in" class="boxthing">
+        <div style="text-align: left; display: inline-block; margin-left: 10%;">
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <h2 style="z-index: 3; font-size: 4vh">React App</h2>
+          <p style="font-size: 2.5vh; width: 50%;">Due to my love for dogs, as well as my family's plans to get a new dog, I decided to do research on the pets.
+            Afterwards, I put together this react app to help families plan dog adoptions. Click to the right of this text to learn more about it.
+          </p>
+        </div>
+        <div class="box" style=" padding-top: 1.5vh; padding-bottom: 1.5vh; display: inline-block;" onclick="location.href='React.html';">
+          <img src="images/redesign/puppy_drawing.png" style="width: 90%; border-radius: 25px; z-index: 2; margin-left: -80%;">
+        </div>
+      </div>
+      <div style="color: black; height: 50%; text-align: center; display: flex; width: 90%; margin-left: 5%;" data-aos="fade-in" class="boxthing">
+        <div style="text-align: left; display: inline-block; margin-left: 10%; padding-bottom:5vh">
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <h2 style="z-index: 3; font-size: 4vh">Iterative Design</h2>
+          <p style="font-size: 2.5vh; width: 50%;">I spent time making a responsive redesign of a local buisness's website: Bagel Gourmet Cafe
+            Click on the image to go visit the redesign!
+          </p>
+        </div>
+        <div class="box" style="padding-top: 3vh; padding-bottom: 1.5vh; display: inline-block;" onclick="location.href='Responsive_Redesign.html';">
+          <img src="knowtex.avif" style="width: 200%; border-radius: 25px; z-index: 2; margin-left: -300%;">
+        </div>
+      </div>
+      <div style="color: black; height: 50%; text-align: center; display: flex; width: 90%; margin-left: 5%;" class="boxthing">
+        <div style="text-align: left; display: inline-block; margin-left: 10%; padding-bottom:5vh;">
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <h2 style="z-index: 3; font-size: 4vh">Iterative Design</h2>
+          <p style="font-size: 2.5vh; width: 50%;">I spent time making a responsive redesign of a local buisness's website: Bagel Gourmet Cafe
+            Click on the image above to go visit the redesign!
+          </p>
+        </div>
+        <div class="box" style= "padding-top: -1.5vh; padding-bottom: 1.5vh; display: inline-block;" onclick="location.href='Responsive_Redesign.html';">
+          <img src="knowtex.avif" style="width: 200%; border-radius: 25px; z-index: 2; margin-left: -300%;">
+        </div>
+      </div>
+      <!-- </div> -->
       <br><br><br><br><br><br><br><br>
       <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
       <script>
