--- a/Responsive_Redesign.html
+++ b/Responsive_Redesign.html
@@ -8,44 +8,43 @@
       <div class="header">
         <div class="header_format" >SleepyPuppy404</div>
           <div class="topnav">
-            <a class="active" href="#home">Context</a>
-            <a href="#Research">Research</a>
-            <a href="#Iteration">Iterations</a>
-            <a href="#Conclusion">Conclusion</a>
+            <a href="#context">Context</a>
+            <a href="#Initial Designs">Initial Designs</a>
+            <a href="#Hi Fi">Hi Fi Design</a>
+            <a href="#Wrap Up">Wrap Up</a>
           </div>
         </div>
       </div>
       <h1 class="border"></h1>
       <br><br><br><br><br><br><br><br>
-      <div style="display: flex;justify-content: center; padding-top: 10vh;">
-        <p style="color: white; font-size: 15vh; width: 50%; z-index: 2">
+      <div style="display: flex;justify-content: center; padding-top: 10vh; width: 90%; margin-left: auto; margin-right: auto;" class="boxthing">
+        <p style="color: black; font-size: 15vh; width: 50%; z-index: 2; font-family: MD Primer Bold,Rubik,Lato,Lucida Grande,Lucida Sans Unicode,Tahoma,Sans-Serif;">
           Project: <br>
           Responsive Redesign <br>
         </p>
-        <img src="blue_bagel.png" style="width: 60vh; height: auto;">
+        <img src="images/redesign/bagel_sandwich.webp" style="width: 60vh; height: auto; z-index: -2;">
       </div>
-      <br><br><br><br><br><br>
-      <br>
-      <br><br><br><br>
-      <div style="color: white; text-align: center; width: 70%; margin: auto; height: 46vh;" class="boxthing" data-aos="fade-in">
+      <br><br><br><br><br><br><br><br id = "context"><br><br><br>
+      <div style="color: black; text-align: center; width: 70%; margin: auto;" class="boxthing" data-aos="fade-in">
         <br>
-        <h1 style="color: white; text-align: center; font-size: 12vh;" data-aos="fade-in">Context</h1>
-        <p style="color: white; font-size: 3vh; width: 80%; margin-left: 10%; text-align: left;">
+        <h1 style="color: black; text-align: center; font-size: 12vh;" data-aos="fade-in">Context</h1>
+        <p style="color: black; font-size: 3vh; width: 80%; margin-left: 10%; text-align: left;">
           Bagel Gourmet is a community staple among the Brown University community. When the dining halls are unavailable,
           students flock to get bagels for breakfast. However, when looking for its website, not only do we get an entirely unappealing site:
           We get one that is actively difficult to navigate. Everything is in an awkward location, the color scheme is cold and uninviting, 
           there is no accessibility support, and it looks "old". From an accessibility standpoint, it fails with regards to translatability and accessibility for 
           the visually impaired due to its small text.
         </p>
+        <br><br><br>
       </div>
       <br><br><br>
-      <div style="color: white; text-align: center; width: 70%; margin: auto;" class="boxthing" data-aos="fade-in">
+      <div style="color: black; text-align: center; width: 70%; margin: auto;" class="boxthing" data-aos="fade-in">
         <br>
-        <h1 style="color: white; text-align: center; font-size: 12vh;" data-aos="fade-in">Getting Started</h1>
+        <h1 style="color: black; text-align: center; font-size: 12vh;" data-aos="fade-in">Getting Started</h1>
         <br>
         <div style="display: flex;">
           <br>
-          <p style="color: white; font-size: 3vh; width: 40%; text-align: left; margin-left: 10%;">
+          <p style="color: black; font-size: 3vh; width: 60%; text-align: left; margin-left: 10%;">
             <br>
             For a project like this, the best place to start was the original site. Although I knew I wanted to get rid of
             the entire asthetic of the site, I wanted to preserve as much of the information as possible. In addition,
@@ -54,21 +53,21 @@
           <div>
             <div class="box" style="padding-top: 1vh;">
               <a href = "http://bagelgourmetcafe.com/">
-                <img src="bgo.png" style="width: 50%; border-radius: 25px; z-index: 2"><br></div>
+                <img src="bgo.png" style="width: 60%; border-radius: 25px; z-index: 2"><br></div>
               </a>
               Link to original site
           </div>
         </div>
         <br><br><br><br>
       </div>
-      <br><br><br>
-      <div style="color: white; text-align: center; width: 70%; margin: auto;" class="boxthing" data-aos="fade-in">
+      <br id = "Initial Designs"><br><br>
+      <div style="color: black; text-align: center; width: 70%; margin: auto;" class="boxthing" data-aos="fade-in">
         <br>
-        <h1 style="color: white; text-align: center; font-size: 12vh;" data-aos="fade-in">Design Iterations</h1>
+        <h1 style="color: wblackhite; text-align: center; font-size: 12vh;" data-aos="fade-in">Initial Designs</h1>
         <br>
         <div style="display: flex;">
           <br>
-          <p style="color: white; font-size: 3vh;text-align: left; margin-left: 10%; margin-right: 10%;">
+          <p style="color: black; font-size: 3vh;text-align: left; margin-left: 10%; margin-right: 10%;">
             There were two halves to what I wanted to do with this project. The first was to clean up this website completely, removing
             superflours content. This essentially meant simplifying a lot of the format. To do so, I added a menu bar with larger text,
             and used images of the bagels to emphasize the actual selling point of the buisness. The second was to make it responsive to different web formats. 
@@ -77,18 +76,96 @@
         </div>
         <br>
         <h1>Website Design:</h1>
-        <img src="website.png" style="width: 80%; border-radius: 25px; z-index: 2">
+        <img src="images/redesign/website_1.png" style="width: 24.7%; border-radius: 30px; z-index: 2; padding: 3vh;">
+        <img src="images/redesign/website_2.png" style="width: 25%; border-radius: 30px; z-index: 2; padding: 3vh;">
+        <img src="images/redesign/website_3.png" style="width: 25%; border-radius: 30px; z-index: 2; padding: 3vh;">
         <h1>Tablet Design:</h1>
-        <img src="tablet.png" style="width: 80%; border-radius: 25px; z-index: 2">
+        <img src="images/redesign/tablet_1.png" style="width: 20%; border-radius: 50px; z-index: 2; padding: 3vh;">
+        <img src="images/redesign/tablet_2.png" style="width: 20%; border-radius: 50px; z-index: 2; padding: 3vh;">
+        <img src="images/redesign/tablet_3.png" style="width: 20%; border-radius: 50px; z-index: 2; padding: 3vh;">
         <h1>Phone Design:</h1>
-        <img src="tablet.png" style="width: 80%; border-radius: 25px; z-index: 2">
+        <img src="images/redesign/phone_1.png" style="width: 18%; border-radius: 55px; z-index: 2; padding: 3vh;">
+        <img src="images/redesign/phone_2.png" style="width: 18.1%; border-radius: 55px; z-index: 2; padding: 3vh;">
+        <img src="images/redesign/phone_3.png" style="width: 18%; border-radius: 55px; z-index: 2; padding: 3vh;">
+        <img src="images/redesign/phone_4.png" style="width: 18%; border-radius: 55px; z-index: 2; padding: 3vh;">
         <br><br><br><br>
       </div>
-      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-      <script>
-        AOS.init();
-      </script>
-      </body>
-        
+      <br id = "Hi Fi"><br><br>
+      <div style="color: black; text-align: center; width: 70%; margin: auto;" class="boxthing" data-aos="fade-in">
+        <br>
+        <h1 style="color: black; text-align: center; font-size: 12vh;" data-aos="fade-in">Hi-Fi Prototype</h1>
+        <br>
+        <p style="color: black; font-size: 3vh;text-align: left; margin-left: 10%; margin-right: 10%;">
+          Following the initial designs, I decided to put together a high fidelity prototype. This involved 
+          creating a visual style guide for the site, then putting together a Figma prototype of the site itself.
+          Like above, I made a different version of these prototypes for the web, mobile, and tablet. Click on anything
+          below to visit these.
+          <br><br>
+          <h1>Visual Design Guide</h1>
+          <div class="box">
+            <a href="https://www.figma.com/proto/f1CWXMAOkEKlL1DjvaVUX8/Untitled?node-id=103%3A154&scaling=min-zoom&page-id=0%3A1">
+              <img src="visualstyledesignguide.png" style="width: 80%; border-radius: 50px; z-index: 2; padding: 3vh;">
+            </a>
+          </div>
+          <h1>Website Prototype:</h1>
+          <div class="box">
+            <a href="https://www.figma.com/proto/f1CWXMAOkEKlL1DjvaVUX8/Untitled?node-id=103%3A155&scaling=min-zoom&page-id=4%3A38">
+              <img src="home_page.png" style="width: 80%; border-radius: 50px; z-index: 2; padding: 3vh;">
+            </a>
+          </div>
+          <h1>Mobile and Tablet Page:</h1>
+          <div style="display: flex; text-align: center;  ">
+            <div class="box">
+              <a href="https://www.figma.com/proto/f1CWXMAOkEKlL1DjvaVUX8/Untitled?node-id=103%3A156&scaling=min-zoom&page-id=4%3A38">
+                <img src="home_page_tablet.png" style="width: 78.5%; border-radius: 50px; z-index: 2; padding: 3vh;">
+              </a>
+            </div>
+            <div class="box">
+              <a href="https://www.figma.com/proto/f1CWXMAOkEKlL1DjvaVUX8/Untitled?node-id=119%3A157&scaling=min-zoom&page-id=4%3A38">
+                <img src="mobile_page.png" style="width: 90%; border-radius: 50px; z-index: 2; padding: 3vh;">
+              </a>
+            </div>
+          </div>
+      </div>
+      <br><br id = "Wrap Up"><br><br>
+      <div style="color: black; text-align: center; width: 70%; margin: auto;" class="boxthing" data-aos="fade-in">
+        <br>
+        <h1 style="color: black; text-align: center; font-size: 12vh;" data-aos="fade-in">Wrapup</h1>
+        <br>
+        <p style="color: black; font-size: 3vh;text-align: left; margin-left: 10%; margin-right: 10%;">
+          Following this, I put together a website based on this, which is linked below:
+            <div class="box">
+              <a href="https://sleepypuppy404.github.io/responsive_redesign_site/">
+                <img src="responsive_redesign.png" style="width: 90%; border-radius: 50px; z-index: 2; padding: 2vh;">
+              </a>
+            </div>
+            <h1>Takeaways</h1>
+            <div style="display: flex; margin-left: 6%; margin-right: 6%;">
+              <div>
+                <h2>Lessons Learnt</h2>
+                <ul style="text-align: left;">
+                  <li>Proper preparation work makes coding the website easier</li>
+                  <li>Color scheme can make or break the design of a website</li>
+                  <li>A visual design guide makes prototyping more organized</li>
+                </ul>
+              </div>
+              <div style="margin-left: 19vh;">
+                <h2>Insights</h2>
+                <ul style="text-align: left;">
+                  <li>Brown works really nicely with lighter colors</li>
+                  <li>Cafes as a whole either use a light fall asthetic or a darker green one</li>
+                  <li>Sidemenus can be really tricky to implement as a whole.</li>
+                </ul>
+              </div>
+            </div>
+
+        <br>   
+      </div>
+      
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+    </body>  
 </html> 
 
