--- a/React.html
+++ b/React.html
@@ -9,7 +9,7 @@
         <div class="header_format" >SleepyPuppy404</div>
           <div class="topnav">
             <a href="#context">Context</a>
-            <a href="#Initial Designs">Initial Designs</a>
+            <a href="#Planned Features">Planned Features</a>
             <a href="#Hi Fi">Hi Fi Design</a>
             <a href="#Wrap Up">Wrap Up</a>
           </div>
@@ -51,43 +51,51 @@
           </p>
           <div>
             <div class="box" style="padding-top: 1vh;">
-              <a href = "http://bagelgourmetcafe.com/">
-                <img src="bgo.png" style="width: 60%; border-radius: 25px; z-index: 2"><br></div>
+              <a href = "images/react/puppy-data.json">
+                <img src="images/react/data.png" style="width: 80%; border-radius: 25px; z-index: 2"><br></div>
               </a>
-              Link to original site
+              Link to dataset
           </div>
         </div>
         <br><br><br><br>
       </div>
-      <br id = "Initial Designs"><br><br>
+      <br id = "Planned Features"><br><br>
       <div style="color: black; text-align: center; width: 70%; margin: auto;" class="boxthing" data-aos="fade-in">
         <br>
-        <h1 style="color: wblackhite; text-align: center; font-size: 12vh;" data-aos="fade-in">Initial Designs</h1>
+        <h1 style="color: wblackhite; text-align: center; font-size: 12vh;" data-aos="fade-in">Planned Features</h1>
         <br>
-        <div style="display: flex;">
-          <br>
-          <p style="color: black; font-size: 3vh;text-align: left; margin-left: 10%; margin-right: 10%;">
-            There were two halves to what I wanted to do with this project. The first was to clean up this website completely, removing
-            superflours content. This essentially meant simplifying a lot of the format. To do so, I added a menu bar with larger text,
-            and used images of the bagels to emphasize the actual selling point of the buisness. The second was to make it responsive to different web formats. 
-            In order to do so, I developed a low fi design for each format: Web, Mobile, and Tablet:
-          </p>
+        <p style="color: black; font-size: 3vh;text-align: left; margin-left: 10%; margin-right: 10%;">
+          In order to make this as effective as possible, in addition to simply displaying a breed of dog's information,
+          I wanted to make it easy to display and see quick information. As a result, I added several different filtering
+          and sorting methods, in order to allow users to narrow down what sort of pet they want. For users adopting multiple dogs at once,
+          I wanted to make some sort of aggregate screen that would allow them to get a sense for the general requirements for their 
+          new dogs. These requirements are included below:</p>
+        <div style="display: flex; color: black; margin-left: 20%;">
+          <div style="padding-right: 15vh;">
+            <h1>Filtering:</h1>
+            <ul style="text-align: left; align-items: center; margin-left: 20%;">
+              <li>Breed Type</li>
+              <li>Price</li>
+            </ul>
+          </div>
+          <div style="padding-right: 15vh;">
+            <h1>Sorting:</h1>
+            <ul style="text-align: left; align-items: center; margin-left: 0%;">
+              <li>Friendliness</li>
+              <li>Activity Level</li>
+              <li>Price</li>
+            </ul>
+          </div>
+          <div>
+            <h1>Aggregator:</h1>
+            <ul style="text-align: left; align-items: center; margin-left: 20%;">
+              <li>Avg Friendliness</li>
+              <li>Avg Activity per day</li>
+              <li>Approximate Cost</li>
+            </ul>
+          </div>
         </div>
         <br>
-        <h1>Website Design:</h1>
-        <img src="images/redesign/website_1.png" style="width: 24.7%; border-radius: 30px; z-index: 2; padding: 3vh;">
-        <img src="images/redesign/website_2.png" style="width: 25%; border-radius: 30px; z-index: 2; padding: 3vh;">
-        <img src="images/redesign/website_3.png" style="width: 25%; border-radius: 30px; z-index: 2; padding: 3vh;">
-        <h1>Tablet Design:</h1>
-        <img src="images/redesign/tablet_1.png" style="width: 20%; border-radius: 50px; z-index: 2; padding: 3vh;">
-        <img src="images/redesign/tablet_2.png" style="width: 20%; border-radius: 50px; z-index: 2; padding: 3vh;">
-        <img src="images/redesign/tablet_3.png" style="width: 20%; border-radius: 50px; z-index: 2; padding: 3vh;">
-        <h1>Phone Design:</h1>
-        <img src="images/redesign/phone_1.png" style="width: 18%; border-radius: 55px; z-index: 2; padding: 3vh;">
-        <img src="images/redesign/phone_2.png" style="width: 18.1%; border-radius: 55px; z-index: 2; padding: 3vh;">
-        <img src="images/redesign/phone_3.png" style="width: 18%; border-radius: 55px; z-index: 2; padding: 3vh;">
-        <img src="images/redesign/phone_4.png" style="width: 18%; border-radius: 55px; z-index: 2; padding: 3vh;">
-        <br><br><br><br>
       </div>
       <br id = "Hi Fi"><br><br>
       <div style="color: black; text-align: center; width: 70%; margin: auto;" class="boxthing" data-aos="fade-in">
