--- a/Responsive_Redesign.html
+++ b/Responsive_Redesign.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/cleanup.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
     <body>
       <div class="header">
@@ -15,19 +15,19 @@
           </div>
         </div>
       </div>
-      <h1 class="border"></h1>
-      <br><br><br><br><br><br><br><br>
-      <div style="display: flex;justify-content: center; padding-top: 10vh; width: 90%; margin-left: auto; margin-right: auto;" class="boxthing">
-        <p style="color: black; font-size: 15vh; width: 50%; z-index: 2; font-family: MD Primer Bold,Rubik,Lato,Lucida Grande,Lucida Sans Unicode,Tahoma,Sans-Serif;">
-          Project: <br>
-          Responsive Redesign <br>
-        </p>
-        <img src="images/redesign/bagel_sandwich.webp" style="width: 60vh; height: auto; z-index: -2;">
+      <div style="height: 60vh; background-color: #3CD2F9" id = "home">
+        <div class="spacing" style="height: 30vh;"></div>
+        <div class="intro" style="align-items: center; width: 49%; margin-left: 15%; color: white; font-family: DM Sans, sans-serif">
+          <p style="color: white; font-size: 10vh; width: 50%; font-family: DM Sans, sans-serif">
+            Project: <br>
+            Responsive Redesign <br>
+          </p>
+        </div>
       </div>
-      <br><br><br><br><br><br><br><br id = "context"><br><br><br>
+      <div style="height: 30vh; background-image: linear-gradient(#3CD2F9, white);"></div>
+      <div class="spacing" style="height: 20vh;" id = "projects"></div>
       <div style="color: black; text-align: center; width: 70%; margin: auto;" class="boxthing" data-aos="fade-in">
-        <br>
-        <h1 style="color: black; text-align: center; font-size: 12vh;" data-aos="fade-in">Context</h1>
+        <h1 style="color: black; font-size: 6vh; font-family: DM Sans, sans-serif" data-aos="fade-in">Context</h1>
         <p style="color: black; font-size: 3vh; width: 80%; margin-left: 10%; text-align: left;">
           Bagel Gourmet is a community staple among the Brown University community. When the dining halls are unavailable,
           students flock to get bagels for breakfast. However, when looking for its website, not only do we get an entirely unappealing site:
